# yew-calc

./: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
src/: main.rs
styles/: input.css  output.css
